add api handlers for teachers
